--- a/Optimization/ECM_Estimation.ipynb
+++ b/Optimization/ECM_Estimation.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "## The data\n",
     "\n",
-    "We'll begin the exercise in this notebook by reading in a Stata data file that contains the computed sample covariances.  These were constructed from a panel of tax returns spanning the 1987 to 2009 period.  The unit of analysis are males, aged 25-60 with at least $2,575 (in 2005$) in labor income.  Labor income is defined as wages and salaries plus self-employment income.\n",
+    "We'll begin the exercise in this notebook by reading in a Stata data file that contains the computed sample covariances.  These were constructed from a panel of tax returns spanning the 1987 to 2009 period.  The unit of analysis are males, aged 25-60 with at least \\$2,575 (in 2005\\$) in labor income.  Labor income is defined as wages and salaries plus self-employment income.\n",
     "\n",
     "The covariances are computed on the residuals from regressing the log of labor income on dummy variables for age, separately by year.\n",
     "\n",
